the start to JS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 In Stockbridge, Edinburgh since 1988, the Stockbridge Community Festival has held the annual Stockbridge Duck Race to raise money for local charities. 1000 rubber ducks are released into the Water of Leith at the Stockbridge to float downstream to the finishing post at the Falshaw Bridge. The 2010 race was memorable for a sudden rain shower at the finish line. The 2011 race was held on 3 July with proceeds going to local charities Stockbridge House & St. Columba's Hospice.
 
             </p>
-            <button id="Quiz" class="quiz">Rubber Duckie Quiz</button>
+            <button id="quiz" class="quiz">Rubber Duckie Quiz</button>
+            <div id="results"></div>
         </section>
     </main>
     <footer>
