--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
             <h2>
                 Muggle Studdies: What is a Rubber Duck?
             </h2>
-            <img class="main-logo" src="assets\Mr. Weasley Rbber Duck.gif" />
+            <img class="weasley" src="assets\Mr. Weasley Rbber Duck.gif" />
             <p> Credit to Wikipedia,Vice.com, Toyhalloffame.org and HP</p>
             <h3>History</h3>
-            <img class="main-logo" src="assets\Rubber Duck.jpg">
+            <img class="duck" src="assets\Rubber Duck.jpg">
             <p>
                 Rubber toys first appeared in the late 1800s, when manufacturers made use of Charles Goodyear’s process for rendering rubber into malleable material. The first rubber ducks didn’t even float: they were cast solid and intended as chew toys. By the 1940s, rubber ducks developed into the iconic floating yellow figure with bright orange bill we recognize today. For many decades, most duck figures have been made of vinyl, but we still call them rubber ducks. <br/>
                 Rubber ducks naturally inspire water play that develops muscle strength and coordination. With their bright color, smooth texture, and (for some) squeaky or quacky sounds, rubber ducks sharpen toddlers’ senses. Their presence in the bathtub soothes youngsters’ fears of water and water immersion and makes good clean fun of the routine hygiene they’re learning. <br/>
             </p>
             <hr />
             <h3>Protest Symbol</h3>
-            <img class="main-logo" src="assets\Rubber Duck Protest.jpeg">
+            <img class="duck" src="assets\Rubber Duck Protest.jpeg">
             <p>
                 Until 1970, they were a niche product, but then they were thrust into the public eye by Jim Henson. In Sesame Street, Ernie's favorite toy is his rubber duckie, and he sings about it in the song by that name. The song was recorded in 1970 and charted at number 16 on the Billboard Hot 100. Little Richard even went on to do a cover. <br/>
                 Dutch artist Florentijn Hofman's Rubber Duck Project was created in 2007 and has since visited locations around the world, covering Europe, South America, Asia, Oceania, the Middle East, and North America. The idea behind it is that the rubber duck is a symbol of happiness and childhood memories, giving comfort to different people regardless of their nationality, age, and race, without political distinction. I'm sure a lot of people heard about the rubber duck that deflated in Beijing. <br/>
@@ -41,7 +41,7 @@
             </p>
             <hr/>
             <h3>Rubber Duck Races</h3>
-            <img class="main-logo" src="assets\Rubber Duck Racing.jpg">
+            <img class="duck" src="assets\Rubber Duck Racing.jpg">
             <p>Rubber duck races, also known as derby duck races, have been used as a method of fundraising for organizations worldwide. People donate money to the organization by sponsoring a duck. At the end of the fundraising drive, all of the ducks are dumped into a waterway, with the first to float past the finish line winning a prize for its sponsor. <br/>
                 The largest race in the United States is the annual Freestore Foodbank Rubber Duck Regatta in Cincinnati, Ohio. First run in 1995, the Rubber Duck Regatta now features over 150,000 ducks raced to raise money for the organization. Since its beginning in 1995 the Rubber Duck Regatta in Cincinnati Ohio has raised over $9 million, and over $1 million has been raised for each year's race since 2014. <br/>
                 In Australia, The Great Brisbane Duck Race is held on the Brisbane River each year to raise funds for the PA Research Foundation.[29] The 100-metre (330 ft) race saw 30,000 rubber ducks enter the race in 2011. The PA Research Foundation also holds a Team Duck Race Challenge where groups are invited to raise funds and participate in either the motorised or non-motorised Team Duck Race with a large 26-centimetre (10 in) tall rubber duck that teams can decorate, brand, and modify. <br/>
