CSS, reset button, comment js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <img src="https://images.unsplash.com/photo-1603736087997-5daec6092347?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1050&q=80" />
         </div>
     </header>
     <main>
@@ -24,7 +24,7 @@
                 Muggle Studdies: What is a Rubber Duck?
             </h2>
             <img class="weasley" src="assets\Mr. Weasley Rbber Duck.gif" />
-            <p> Credit to Wikipedia,Vice.com, Toyhalloffame.org and HP</p>
+            <p><cite>Credit to Wikipedia,Vice.com, Toyhalloffame.org and HP</cite></p>
             <h3>History</h3>
             <img class="duck" src="assets\Rubber Duck.jpg">
             <p>
@@ -50,11 +50,9 @@
             </p>
             <button id="quiz" class="quiz">Rubber Duckie Quiz</button>
             <div id="results"></div>
+            <button id="reset" class="button">Reset</button>
         </section>
     </main>
-    <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
-    </footer>
 
     <script type="module" src="./app.js"></script>
 </body>
